assets/css/main.css
* {
    font-family: 'Montserrat', sans-serif;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0 auto !important;
    padding: 0 !important;
}

.img-responsive {
    background: url("../images/heroBG.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    /* height: 100vh; */
}

.navbar {
    background: none!important;
    /* background: rgba(255, 255, 255, 0.2)!important; */
    padding: 2rem;
}

#logo {
    width: 15vw;
}

li {
    font-size: 1.2rem;
    margin-right: 2rem;
}

h1,h3,h5 {
    color: white;
}

a {
    color: white;
}

a:hover {
    color: white;
    font-weight: 500;
}

#construct {
    width: 30vw;
    padding: 2rem;
}

.card-deck {
    margin: 1rem 0 4rem 0;
}

.card {
    background-color: rgb(255,255,255,0);
}

.card:hover {
    background-color: rgba(8, 0, 113, 0.2);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.fa-lg {
    color: white;
    margin-bottom: .5rem;
}

.footer {
    background-color: rgb(0, 2, 33);
    padding: .5rem 0;
    /* background: none; */
    width: 100%;
    position: absolute;
    bottom: 0px;
}

#copyright {
    color: rgb(65, 77, 142);
    padding: .5rem 0 0 0;
}

/* // Extra small devices (portrait phones, less than 576px) */
@media (max-width: 575.98px) {
    .navbar {
        background: rgb(7, 0, 48, 0.9)!important;
    }

    h1 {
        font-size: 2.2rem;
        margin-bottom: 1rem;
    }

    h3 {
        font-size: 1.4rem;;
    }

    #logo {
        width: 50vw;
    }

    #construct {
        width: 94vw;
        margin: 3rem 0 0 0;
    }

    .footer {
        position: relative;
        bottom: 0px;
    }
}

/* // Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) and (max-width: 767.98px) {
    #logo {
        width: 60vw;
    }
}

/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) and (max-width: 991.98px) {
    #logo {
        width: 20vw;
    }
}

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) and (max-width: 1199.98px) {
    #construct {
        width: 60vw;
        margin: 3rem 0 0 0;
    }

}

/* // Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    
}

